fix: settings svg animation overflow

--- a/src/styles/gui.scss
+++ b/src/styles/gui.scss
@@ -859,7 +859,7 @@ input.fracgui-search-input {
 //·· Settings Button ···································································¬
 
 .fracgui-settings-button {
-	contain: content;
+	contain: layout style;
 	display: flex;
 	align-items: center;
 	justify-content: flex-start;
